add search to a header component

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -3,5 +3,9 @@
     <a class="navbar-brand">
       <h1>{{storeName}}</h1>
     </a>
+    <form class="d-flex">
+      <input class="form-control me-2" type="search" placeholder="Harry Potter" aria-label="Search">
+      <button class="btn btn-light btn-outline-secondary" type="submit">Search</button>
+    </form>
   </div>
 </nav>
