add service getting data from external api

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -85,3 +85,6 @@
 <!--  </div>-->
 <!--</ng-template>-->
 <app-header></app-header>
+<div id="all-cards" *ngFor="let book of books">
+  {{book.title}}
+</div>
