--- a/frontend/src/app/book/book.component.html
+++ b/frontend/src/app/book/book.component.html
@@ -1,3 +1,12 @@
-<div class="container">
-  {{book?.title}}
+<div id="whole-card" class="container py-3">
+  <div class="card">
+    <div class="card-body p-4">
+      <div class="d-flex">
+        <h6>{{book?.title}}</h6>
+      </div>
+      <div class="d-flex align-items-center mt-5 mb-4 ">
+        <h6 class="display-4 mb-0 font-weight-bold"> {{book?.authors}}</h6>
+      </div>
+    </div>
+  </div>
 </div>
