--- a/frontend/src/app/book/book.component.html
+++ b/frontend/src/app/book/book.component.html
@@ -1,12 +1,16 @@
 <div id="whole-card" class="container py-3">
   <div class="card">
     <div class="card-body p-4">
-      <div class="d-flex">
+      <div id="cover-picture">
+        <img src="https://covers.openlibrary.org/b/id/{{book?.cover_id}}-M.jpg">
+      </div>
+      <div>
         <h6>{{book?.title}}</h6>
       </div>
-      <div class="d-flex align-items-center mt-5 mb-4 ">
-        <h6 class="display-4 mb-0 font-weight-bold"> {{book?.authors}}</h6>
+      <div>
+        <h6> {{book?.authors}}</h6>
       </div>
     </div>
   </div>
 </div>
+
