style book covers

--- a/frontend/src/app/book/book.component.html
+++ b/frontend/src/app/book/book.component.html
@@ -1,9 +1,9 @@
 <div id="whole-card" class="container py-3">
   <div class="card">
-    <div class="card-body p-4">
-      <div id="cover-picture">
-        <img src="https://covers.openlibrary.org/b/id/{{book?.cover_id}}-M.jpg">
-      </div>
+    <div id="cover-picture">
+      <img src="https://covers.openlibrary.org/b/id/{{book?.cover_id}}-M.jpg">
+    </div>
+    <div class="card-body">
       <div>
         <h6>{{book?.title}}</h6>
       </div>
