--- a/frontend/src/app/book/book.component.css
+++ b/frontend/src/app/book/book.component.css
@@ -1,4 +1,19 @@
 .card {
   border-radius: 35px;
-  width: 270px;
+  width: 200px;
+  font-family: Tahoma, Verdana, sans-serif;
+}
+
+#cover-picture {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  border-radius: 35px;
+}
+
+img {
+  width: 100%;
+  height: 310px;
+  object-fit: cover;
+  border-radius: 35px 35px 0 0;
 }
