--- a/frontend/src/app/book/book.component.css
+++ b/frontend/src/app/book/book.component.css
@@ -2,6 +2,8 @@
   border-radius: 35px;
   width: 200px;
   font-family: Tahoma, Verdana, sans-serif;
+  box-shadow: 0px 1px 17px rgba(0,0,0,0.09);
+  border-color: white;
 }
 
 #cover-picture {
@@ -16,4 +18,8 @@ img {
   height: 310px;
   object-fit: cover;
   border-radius: 35px 35px 0 0;
+}
+
+h6 {
+  font-size: 15px;
 }
