--- a/frontend/src/app/book/book.component.css
+++ b/frontend/src/app/book/book.component.css
@@ -15,8 +15,8 @@
 
 img {
   width: 100%;
-  height: 310px;
-  object-fit: cover;
+  height: 270px;
+  object-fit: fill;
   border-radius: 35px 35px 0 0;
 }
 
