--- a/frontend/src/app/book/book.component.html
+++ b/frontend/src/app/book/book.component.html
@@ -1,9 +1,12 @@
 <div id="whole-card" class="container py-3">
   <div class="card">
+    <div class="wrapper">
+    <i class="bi bi-cart"></i>
     <div id="cover-picture">
       <img [src]="picture()">
     </div>
-    <div class="card-body">
+    </div>
+    <div class="book-data">
       <div>
         <h6>{{book?.title}}</h6>
       </div>
