--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -3,9 +3,12 @@
     <a class="navbar-brand">
       <h1>{{storeName}}</h1>
     </a>
+    <div class="search-cart">
     <form class="d-flex">
       <input class="form-control me-2" type="search" placeholder="Harry Potter" aria-label="Search" #query>
       <button class="btn btn-light btn-outline-secondary" type="submit" (click)="setQuery(query.value)">Search</button>
     </form>
+    <h5><i class="bi bi-cart"></i></h5>
+    </div>
   </div>
 </nav>
