--- a/frontend/src/app/book/book.component.html
+++ b/frontend/src/app/book/book.component.html
@@ -1,7 +1,7 @@
 <div id="whole-card" class="container py-3">
   <div class="card">
     <div class="wrapper">
-    <i class="bi bi-cart"></i>
+    <i class="bi bi-cart" (click)="addToCart(book!)"></i>
     <div id="cover-picture">
       <img [src]="picture()">
     </div>
