--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,1 @@
-<app-header (queryEvent)="setQuery($event)"></app-header>
-<div class="container">
-  <div id="all-cards" *ngFor="let book of books">
-    <app-book class="col-lg-4 col-md-6 col-sm-6" [book]="book"></app-book>
-  </div>
-</div>
+<router-outlet></router-outlet>
