--- a/frontend/src/app/header/header.component.css
+++ b/frontend/src/app/header/header.component.css
@@ -16,8 +16,13 @@
 .bi-cart {
   padding-left: 30px;
   text-align: center;
+  text-decoration: none;
 }
 
 h5 {
   padding-top: 5px;
+}
+
+a {
+  color: inherit;
 }
