--- a/frontend/src/app/book/book.component.html
+++ b/frontend/src/app/book/book.component.html
@@ -3,7 +3,7 @@
     <div class="wrapper">
     <i class="bi bi-cart" (click)="addToCart(book!)"></i>
     <div id="cover-picture">
-      <img [src]="book?.picture()">
+      <img [src]="book?.pictureUrl">
     </div>
     </div>
     <div class="book-data">
