add delete feature to shopping cart

--- a/frontend/src/app/cart/cart.component.html
+++ b/frontend/src/app/cart/cart.component.html
@@ -12,7 +12,7 @@
         </div>
       </div>
       <div class="price">{{book.price}}$</div>
-      <i class="bi bi-trash"></i>
+      <i class="bi bi-trash" (click)="deleteFromCart(book)"></i>
     </div>
   </div>
 </div>
