--- a/frontend/src/app/cart/cart.component.css
+++ b/frontend/src/app/cart/cart.component.css
@@ -3,7 +3,7 @@
   font-family: Helvetica, Verdana, sans-serif;
   font-weight: 100;
   color: #3A3B3C;
-  padding: 20px;
+  padding: 25px;
   font-size: 15px;
 }
 
@@ -26,4 +26,8 @@ img {
 .cover-and-description {
   display: flex;
   width: 400px;
+}
+
+.bi-trash:hover {
+  color: #b0b0b0;
 }
