--- a/frontend/src/app/books/books.component.html
+++ b/frontend/src/app/books/books.component.html
@@ -1,6 +1,8 @@
 <app-header (queryEvent)="setQuery($event)"></app-header>
 <div class="container">
   <div id="all-cards" *ngFor="let book of books">
-    <app-book class="col-lg-4 col-md-6 col-sm-6" [book]="book"></app-book>
+    <a [routerLink]="['/books', book.id]">
+    <app-book class="col-lg-4 col-md-6 col-sm-6" [book]="book" ></app-book>
+    </a>
   </div>
 </div>
