--- a/frontend/src/app/cart/cart.component.html
+++ b/frontend/src/app/cart/cart.component.html
@@ -1,4 +1,4 @@
-<app-header [isCart]="true"></app-header>
+<app-header [isSearchHidden]="true"></app-header>
 <div class="container cart">
   <h3>Cart</h3>
   <div class="cart-item" *ngFor="let book of books">
