--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand" routerLink="">
       <h1>{{storeName}}</h1>
     </a>
-    <div class="search-cart" *ngIf="!isCart">
+    <div class="search-cart" *ngIf="!isSearchHidden">
     <form class="d-flex">
       <input class="form-control me-2" type="search" placeholder="Harry Potter" aria-label="Search" #query>
       <button class="btn btn-light btn-outline-secondary" type="submit" (click)="setQuery(query.value)">Search</button>
