--- a/frontend/src/app/book/book.component.html
+++ b/frontend/src/app/book/book.component.html
@@ -1,19 +1,23 @@
 <div id="whole-card" class="container py-3">
   <div class="card">
     <div class="wrapper">
-    <i class="bi bi-cart" (click)="addToCart(book!)"></i>
-    <div id="cover-picture">
-      <img [src]="book?.pictureUrl">
-    </div>
-    </div>
-    <div class="book-data">
-      <div>
-        <h6>{{book?.title}}</h6>
-      </div>
-      <div>
-        <h6>{{book?.authors}}</h6>
+      <i class="bi bi-cart" (click)="addToCart(book!)"></i>
+      <div id="cover-picture">
+        <a [routerLink]="['/books', book?.id]">
+          <img [src]="book?.pictureUrl">
+        </a>
       </div>
     </div>
+    <a [routerLink]="['/books', book?.id]">
+      <div class="book-data">
+        <div>
+          <h6>{{book?.title}}</h6>
+        </div>
+        <div>
+          <h6>{{book?.authors}}</h6>
+        </div>
+      </div>
+    </a>
   </div>
 </div>
 
