--- a/frontend/src/app/book-details/book-details.component.css
+++ b/frontend/src/app/book-details/book-details.component.css
@@ -8,6 +8,7 @@
   display: flex;
   width: 84%;
   margin: auto;
+  position: relative;
 }
 
 img {
@@ -17,9 +18,24 @@ img {
 .price {
   font-weight: bold;
   position: absolute;
-  bottom: 0;
+  bottom: 5px;
+  font-size: larger;
 }
 
 .description {
   position: relative;
+}
+
+.btn {
+  height: 40px;
+  width: 120px;
+  position: absolute;
+  bottom: 27px;
+  right: 27px;
+}
+
+.title {
+  font-size: large;
+  margin-bottom: 20px;
+  font-weight: 400;
 }
