--- a/frontend/src/app/book/book.component.html
+++ b/frontend/src/app/book/book.component.html
@@ -1,4 +1,4 @@
-<div id="whole-card" class="container py-3">
+<div id="whole-card" class="container">
   <div class="card">
     <div class="wrapper">
       <i class="bi bi-cart" (click)="addToCart(book!)"></i>
