--- a/frontend/src/app/books/books.component.html
+++ b/frontend/src/app/books/books.component.html
@@ -1,6 +1,10 @@
 <app-header (queryEvent)="setQuery($event)"></app-header>
 <div class="container">
-  <div id="all-cards" *ngFor="let book of books">
+  <div class="row">
+    <div class="col-3"><app-filters [books]="books"></app-filters>  </div>
+    <div class="col-9"><div id="all-cards" *ngFor="let book of books">
     <app-book class="col-lg-4 col-md-6 col-sm-6" [book]="book" ></app-book>
+  </div>
+    </div>
   </div>
 </div>
