--- a/frontend/src/app/books/books.component.css
+++ b/frontend/src/app/books/books.component.css
@@ -1,3 +1,9 @@
 #all-cards {
   display: inline-block;
 }
+
+@media only screen and (max-width: 992px) {
+  app-filters {
+    display: none;
+  }
+}
