--- a/frontend/src/app/books/books.component.html
+++ b/frontend/src/app/books/books.component.html
@@ -1,8 +1,8 @@
 <app-header (queryEvent)="setQuery($event)"></app-header>
 <div class="container">
   <div class="row">
-    <div class="col-3"><app-filters [books]="books"></app-filters>  </div>
-    <div class="col-9"><div id="all-cards" *ngFor="let book of books">
+    <div class="col-lg-3"><app-filters [books]="books"></app-filters>  </div>
+    <div class="col-lg-9 col-md-12 col-sm-12"><div id="all-cards" *ngFor="let book of books">
     <app-book class="col-lg-4 col-md-6 col-sm-6" [book]="book" ></app-book>
   </div>
     </div>
