--- a/frontend/src/app/book/book.component.css
+++ b/frontend/src/app/book/book.component.css
@@ -7,7 +7,7 @@
   width: 200px;
   font-family: Helvetica, Verdana, sans-serif;
   box-shadow: 0px 1px 17px rgba(0,0,0,0.09);
-  border-color: white;
+  border: none;
 }
 
 #cover-picture {
