--- a/frontend/src/app/filters/filters.component.css
+++ b/frontend/src/app/filters/filters.component.css
@@ -3,6 +3,7 @@
   padding: 8px;
   font-weight: 600;
   font-size: larger;
+  color: #212328;
 }
 
 #prices-filter {
@@ -11,4 +12,5 @@
 
 #prices-text {
   font-weight: bold;
+  color: #212328;
 }
