add filter icon to filter field on small screens

--- a/frontend/src/app/books/books.component.html
+++ b/frontend/src/app/books/books.component.html
@@ -1,7 +1,7 @@
 <app-header (queryEvent)="setQuery($event)"></app-header>
 <div class="container">
   <div class="filters-small-screen">
-    <div id="filters-text-small-screens" class="row">Filters</div>
+    <div id="filters-text-small-screens" class="row"><i class="bi bi-sliders2"></i> <span>Filters</span></div>
   </div>
   <div class="row">
     <div class="col-lg-3">
