--- a/frontend/src/app/books/books.component.css
+++ b/frontend/src/app/books/books.component.css
@@ -9,17 +9,14 @@
 }
 
 #filters-text-small-screens {
-  width: auto;
   background: #F8F8FA;
   border-radius: 12px;
   color: #212328;
   height: 44px;
   font-weight: 500;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
+  display: inline-block;
   cursor: pointer;
-  padding: 1px 16px;
+  padding: 10px 16px;
   font-size: 15px;
   margin-left: 10px;
   margin-bottom: 15px;
@@ -34,4 +31,8 @@
 .filters-small-screen {
   display: flex;
   justify-content: left;
+}
+
+#filters-text-small-screens > * {
+  padding: 4px;
 }
