--- a/frontend/src/app/books/books.component.css
+++ b/frontend/src/app/books/books.component.css
@@ -3,7 +3,7 @@
 }
 
 @media only screen and (max-width: 992px) {
-  app-filters {
+  #filter-big-screen {
     display: none;
   }
 }
@@ -35,4 +35,41 @@
 
 #filters-text-small-screens > * {
   padding: 4px;
+}
+
+
+.our-modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+.our-inner-modal {
+  background-color: #fefefe;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%;
+  border-radius: 10px;
+}
+
+.display-flex {
+  display: flex;
+  padding: 8px;
+}
+
+.our-inner-modal span {
+  margin-right: 5px;
+  width: 125px;
+}
+
+.icon-parent {
+  display: flex;
+  justify-content: right;
 }
