--- a/frontend/src/app/books/books.component.css
+++ b/frontend/src/app/books/books.component.css
@@ -37,7 +37,6 @@
   padding: 4px;
 }
 
-
 .our-modal {
   position: fixed;
   z-index: 1;
@@ -47,14 +46,14 @@
   height: 100%;
   overflow: auto;
   background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0,0,0,0.2);
 }
 
 .our-inner-modal {
   background-color: #fefefe;
   margin: 10% auto;
   padding: 20px;
-  border: 1px solid #888;
+  border: none;
   width: 30%;
   border-radius: 10px;
 }
