add dual-slider component

--- a/frontend/src/app/filters/filters.component.html
+++ b/frontend/src/app/filters/filters.component.html
@@ -4,7 +4,7 @@
     <div id="prices-text">Prices</div>
     <label class="form-label" for="priceRange">{{getPriceRange()}}</label>
     <div class="range">
-      <input type="range" class="form-range" id="priceRange"/>
+      <app-dual-slider id="priceRange"></app-dual-slider>
     </div>
   </div>
 </div>
